force-app/main/default/objects/Log_Entry__c/fields/Error_Class__c.field-meta.xml
<CustomField>
    <fullName>Error_Class__c</fullName>
    <label>Error Class</label>
    <type>TextArea</type>
</CustomField>