force-app/main/default/objects/Log_Entry__c/fields/Keep_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Keep_Long_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep Long Term</label>
    <type>Checkbox</type>
</CustomField>